Several refactorings to: reduce code duplication; improve class hierarchy and project’s extensibility; reduce bug probability; clean the code and unit tests in order to improve code readability; correct minor bugs; reduce code duplication of unit tests; include extensive set of unit tests to validate performed changes. ------------
- Refactorings in class `Pe`

	- Created an enum `Status` into `Pe` class to define the status of a `Pe`, avoiding the use of int constants (that requires extra validation and may be prone to storing values outside the acceptable range).

	- Refactoring to avoid accepting a null PE provisioner (that caused null pointer exceptions when calling methods such as `Pe.getMips`)

- Several refactorings in classes such as `Host`, `Vm` and provisioners, changing the way that the capacity and allocated resources are stored.

	- It has been noticed a repetitive set of attributes and methods over several classes. For instance: attributes to store resource capacity and allocation; and methods to get the amount of free available resource and amount of allocated resource. These repetitive codes were found in classes such as Vm and provisioners, what made clear the need of a new class with these behaviours and data. Accordingly, a new set of classes was created inside the new package `org.cloudbus.cloudsim.resources`.

	- An abstract `Resource` interface was created, that is used to define resource capacity and allocation for Hosts and VMs. It uses generics to identify the type associated with the resource (if `Double`, `Long`, `Integer`, etc). It defines the signature of methods to manage a given resource such as CPU, RAM or BW of VMs and Hosts.

	- The new `ResourceAbstract` class implements basic behaviours of a `Resource`, managing its capacity, allocated and available amount of resources. New validations were introduced to avoid setting invalid values to the resource, such as negative values or a zero capacity. The class also allows changing the cap

--- a/modules/cloudsim/pom.xml
+++ b/modules/cloudsim/pom.xml
@@ -64,7 +64,16 @@
 				</tags>
 			</configuration>
 		</plugin>
-	</plugins>
+  	 <plugin>
+  	  <groupId>org.apache.maven.plugins</groupId>
+  	  <artifactId>maven-compiler-plugin</artifactId>
+  	  <version>2.3.2</version>
+  	  <configuration>
+  	   <source>1.7</source>
+  	   <target>1.7</target>
+  	  </configuration>
+  	 </plugin>
+  	</plugins>
   </build>
     <dependencies>
         <dependency>
@@ -96,6 +105,17 @@
 		<artifactId>maven-surefire-report-plugin</artifactId>
 		<version>2.11</version>
 	  </plugin>
+          <plugin>
+            <!-- 
+             Plugin for code coverage, enabling
+             generation of reports on IDE to see percentage
+             of the project's code that is being covered by unit tests. 
+            -->
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.6</version>
+          </plugin>
+          
 	</plugins>
   </reporting>	
   
