--- a/modules/cloudsim-examples/pom.xml
+++ b/modules/cloudsim-examples/pom.xml
@@ -9,8 +9,20 @@
   
   <artifactId>cloudsim-examples</artifactId>
   <name>cloudsim-examples</name>
-  
-  <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
   	<dependency>
   		<groupId>${project.groupId}</groupId>
   		<artifactId>cloudsim</artifactId>
