- Usage of Java 8 lambda expressions in VmCreationFailureIntegrationTest class. - Simplification of builder's attributes names, removing the word "default" from them - Updated the DatacenterSimple class to use the scheduleInterval to define the interval to update cloudlets processing, in the same way as in PowerDatacenter class

--- a/modules/cloudsim/pom.xml
+++ b/modules/cloudsim/pom.xml
@@ -78,28 +78,18 @@
                         at the IDE-->
                         <version>2.11</version>
                     </plugin>
-                </plugins>
-            </build>
-        </profile>        
-        
-        <!-- Switch OFF the docling in Java 8 -->  
-        <profile>
-            <id>doclint-java8-disable</id>
-            <activation>
-                <jdk>[1.8,)</jdk>
-            </activation>
-            <build>
-                <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
+                            <!-- Switch OFF the docling in Java 8 -->  
                             <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile>        
+        
     </profiles>
     <!-- ===================================== -->
   
@@ -151,6 +141,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.4.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
             <type>jar</type>
         </dependency>
     </dependencies>
