--- a/modules/cloudsim-examples/pom.xml
+++ b/modules/cloudsim-examples/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>modules</artifactId>
     <groupId>org.cloudbus.cloudsim</groupId>
-    <version>3.1-SNAPSHOT</version>
+    <version>4.0</version>
   </parent>
   
   <artifactId>cloudsim-examples</artifactId>
