--- a/modules/cloudsim/pom.xml
+++ b/modules/cloudsim/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>modules</artifactId>
         <groupId>org.cloudbus.cloudsim</groupId>
-        <version>3.1-SNAPSHOT</version>
+        <version>4.0</version>
     </parent>
   
     <artifactId>cloudsim</artifactId>
@@ -154,6 +154,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
             <type>jar</type>
         </dependency>
     </dependencies>
