--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.cloudbus.cloudsim</groupId>
     <artifactId>cloudsim-package</artifactId>
-    <version>3.1-SNAPSHOT</version>
+    <version>4.0</version>
   </parent>
   
   <artifactId>modules</artifactId>
