--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,46 @@
   				<artifactId>maven-compiler-plugin</artifactId>
   				<version>2.3.2</version>
   				<configuration>
-  					<source>1.7</source>
-  					<target>1.7</target>
+  					<source>1.8</source>
+  					<target>1.8</target>
   				</configuration>
   			</plugin>
+            <!-- 
+             Plugin for code coverage, enabling
+             generation of reports on IDE to see percentage
+             of the project's code that is being covered by unit tests. 
+            -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.6.201602180812</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals><goal>prepare-agent</goal></goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals><goal>report</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--    Send code coverage reports to http://coveralls.io,
+            in order to show percentage of code coverage in
+            the README file.
+            Your coverall repoToken have to be defined in
+            an environment variable at you machine
+            in order to enable sending the coverage
+            report to the coveralls server.
+            https://github.com/trautonen/coveralls-maven-plugin
+            -->
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.1.0</version>
+                <configuration><repoToken>${env.coveralls_repo_token}</repoToken></configuration>
+            </plugin>       			
   		</plugins>
   	</pluginManagement>
   </build>  
