--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: java
-script: mvn clean package
+#The package distribution is being ignored from the build process at the Travis Service
+#because it uses the other cloudsim projects as maven dependencies.
+#However, the public Travis repositories only search fro dependencies at the Maven Central,
+#ignoring the existing local ones. That causes the build to fail, once CloudSim
+#is not at the Maven Central
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl modules,modules/cloudsim,modules/cloudsim-examples
+script: mvn clean package -pl modules,modules/cloudsim,modules/cloudsim-examples
+after_success:
+  #https://github.com/trautonen/coveralls-maven-plugin
+  - mvn clean test jacoco:report coveralls:report
 jdk:
   - oraclejdk8
