--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,19 @@
   			<version>4.10</version>
   			<scope>test</scope>                        
   		</dependency>
+  		<!-- extension for easymock in order to provide mock of static methods -->
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>1.6.4</version>
+			<scope>test</scope>    
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-easymock</artifactId>
+			<version>1.6.4</version>
+			<scope>test</scope>    
+		</dependency>
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
