Updated artefact names in pom.xml files to the new cloudsim-plus modules

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -57,13 +57,13 @@
   	</dependency>
   	<dependency>
   		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-examples</artifactId>
+		<artifactId>cloudsim-plus-examples</artifactId>
 		<version>${project.version}</version>
 		<type>jar</type>
   	</dependency>
   	<dependency>
   		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-examples</artifactId>
+		<artifactId>cloudsim-plus-examples</artifactId>
 		<version>${project.version}</version>
 		<type>jar</type>
 		<classifier>sources</classifier>
