--- a/distribution/src/main/assembly/package.xml
+++ b/distribution/src/main/assembly/package.xml
@@ -8,10 +8,10 @@
 		<dependencySet>
 			<outputDirectory>jars</outputDirectory>
 			<includes>
-				<include>${project.groupId}:cloudsim:jar</include>
-				<include>${project.groupId}:cloudsim:jar:sources</include>
-				<include>${project.groupId}:cloudsim-examples:jar</include>
-				<include>${project.groupId}:cloudsim-examples:jar:sources</include>
+				<include>${project.groupId}:cloudsim-plus:jar</include>
+				<include>${project.groupId}:cloudsim-plus:jar:sources</include>
+				<include>${project.groupId}:cloudsim-plus-examples:jar</include>
+				<include>${project.groupId}:cloudsim-plus-examples:jar:sources</include>
 			</includes>
 		</dependencySet>
 		<dependencySet>
@@ -23,7 +23,7 @@
 				</excludes>
 			</unpackOptions>
 			<includes>
-				<include>${project.groupId}:cloudsim:jar:sources</include>
+				<include>${project.groupId}:cloudsim-plus:jar:sources</include>
 			</includes>
 		</dependencySet>
 		<dependencySet>
@@ -33,9 +33,9 @@
 				<excludes>
 					<exclude>META-INF/</exclude>
 				</excludes>
-			</unpackOptions>			
+			</unpackOptions>
 			<includes>
-				<include>${project.groupId}:cloudsim-examples:jar:sources</include>
+				<include>${project.groupId}:cloudsim-plus-examples:jar:sources</include>
 			</includes>
 		</dependencySet>
 		<dependencySet>
@@ -44,7 +44,7 @@
 				<excludes>
 					<exclude>META-INF/</exclude>
 				</excludes>
-			</unpackOptions>			
+			</unpackOptions>
 			<outputDirectory>/</outputDirectory>
 			<includes>
 				<include>${project.groupId}:documentation</include>
@@ -57,9 +57,9 @@
 				<excludes>
 					<exclude>META-INF/</exclude>
 				</excludes>
-			</unpackOptions>			
+			</unpackOptions>
 			<includes>
-				<include>${project.groupId}:cloudsim:jar:javadoc</include>
+				<include>${project.groupId}:cloudsim-plus:jar:javadoc</include>
 			</includes>
 		</dependencySet>
 	</dependencySets>
